--- a/Telas/Tela_Consulta_Resultados.fxml
+++ b/Telas/Tela_Consulta_Resultados.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controladores.Tela_Consulta_Resultados">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="POOAPS.Controladores.Tela_Consulta_Resultados">
    <children>
       <TableView fx:id="tvTableView" layoutX="28.0" layoutY="88.0" prefHeight="228.0" prefWidth="668.0">
         <columns>
