--- a/Telas/Tela_Main.fxml
+++ b/Telas/Tela_Main.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controladores.Tela_Main">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="POOAPS.Controladores.Tela_Main">
    <children>
       <Button fx:id="btnIniciarSimulacao" layoutX="224.0" layoutY="116.0" mnemonicParsing="false" onAction="#onClickbtnIniciarSimulacao" prefHeight="37.0" prefWidth="144.0" text="Iniciar Simulacao" />
       <Button fx:id="btnConsultarResultados" layoutX="224.0" layoutY="209.0" mnemonicParsing="false" onAction="#onClickbtnConsultarResultados" prefHeight="37.0" prefWidth="144.0" text="Consultar Resultados" />
