--- a/Telas/Tela_Resultados.fxml
+++ b/Telas/Tela_Resultados.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controladores.Tela_Resultado">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="POOAPS.Controladores.Tela_Resultado">
    <children>
       <Button fx:id="btnSalvar" layoutX="363.0" layoutY="297.0" mnemonicParsing="false" onAction="#onClickbtnSalvar" text="Salvar no Banco" />
       <Button fx:id="btnVoltar" layoutX="496.0" layoutY="297.0" mnemonicParsing="false" onAction="#onClickbtnVoltar" text="Voltar" />
